--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Spotify-clone</title>
-</head>
-<body>
-   
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Spotify-clone</title>
+      <link rel="stylesheet" href="style.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
+   </head>
+   <body>
+      <header>
+            <div class="logo">
+               <img src="images/spotify-logo.png" alt="">
+            </div>
+            <div class="header-mid-sec">
+               <a href="">
+                  <img src="images/home-btn.png" alt="">
+               </a>
+               <div class="search-bar">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <input type="text" placeholder="What do you want to play ?">
+                  <div class="browse-bar">
+                     <div></div>
+                  <img src="images/browse-btn.png" alt="">
+                  </div>
+               </div>
+            </div>
+            <div class="header-btns">
+               <button class="header-first-btn">Sign up</button>
+               <button class="header-second-btn">Log in</button>
+            </div>
+      </header>
+   </body>
 </html>
