--- a/index.html
+++ b/index.html
@@ -15,26 +15,68 @@
    </head>
    <body>
       <header>
-            <div class="logo">
-               <img src="images/spotify-logo.png" alt="">
+         <div class="logo">
+            <img src="images/spotify-logo.png" alt="" />
+         </div>
+         <div class="header-mid-sec">
+            <a href="">
+               <img src="images/home-btn.png" alt="" />
+            </a>
+            <div class="search-bar">
+               <i class="fa-solid fa-magnifying-glass"></i>
+               <input type="text" placeholder="What do you want to play ?" />
+               <div class="browse-bar">
+                  <div></div>
+                  <img src="images/browse-btn.png" alt="" />
+               </div>
             </div>
-            <div class="header-mid-sec">
-               <a href="">
-                  <img src="images/home-btn.png" alt="">
-               </a>
-               <div class="search-bar">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <input type="text" placeholder="What do you want to play ?">
-                  <div class="browse-bar">
-                     <div></div>
-                  <img src="images/browse-btn.png" alt="">
+         </div>
+         <div class="header-btns">
+            <button class="header-first-btn">Sign up</button>
+            <button class="header-second-btn">Log in</button>
+         </div>
+      </header>
+      <main>
+         <section class="left-sec">
+            <div class="sidebar">
+               <div class="sidebar-head">
+                  <h4><img src="images/library-btn.png" alt="">Your Library</h4>
+                  <a href="#">+</a>
+               </div>
+               <div class="sidebar-scroll-sec">
+                  <div class="side-scroll-cnt">
+                     <h4>Create your first playlist</h4>
+                     <p>It's easy, we'll help you</p>
+                     <button class="side-scroll-btn">Create playlist</button>
+                  </div>
+
+                  <div class="side-scroll-cnt">
+                     <h4>Let's find some podcasts to follow</h4>
+                     <h6>We'll keep you updated on new episodes</h6>
+                     <button class="side-scroll-btn">Browse Podcasts</button>
+                  </div>
+               </div>
+
+               <div class="sidebar-footer">
+                  <div>
+                     <a href="">Legal</a>
+                     <a href="">Safety & Privacy center</a>
+                     <a href="">Privacy policy</a>
+                     <a href="">Cookies</a>
+                  </div>
+                  <div>
+                     <a href="">About ads</a>
+                     <a href="">Accessibility</a>
+                  </div>
+                  <div class="sidebar-foot-cookie">
+                     <a href="">Cookies</a>
+                  </div>
+                  <div class="sidebar-foot-lng">
+                     <button><img src="images/language-icon.svg" alt="" /> English</button>
                   </div>
                </div>
             </div>
-            <div class="header-btns">
-               <button class="header-first-btn">Sign up</button>
-               <button class="header-second-btn">Log in</button>
-            </div>
-      </header>
+         </section>
+      </main>
    </body>
 </html>
