--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
          </div>
          <div class="header-mid-sec">
             <a href="">
-               <img src="images/home-btn.png" alt="" />
+               <img src="images/icons/home-btn.png" alt="" />
             </a>
             <div class="search-bar">
                <i class="fa-solid fa-magnifying-glass"></i>
                <input type="text" placeholder="What do you want to play ?" />
                <div class="browse-bar">
                   <div></div>
-                  <img src="images/browse-btn.png" alt="" />
+                  <img src="images/icons/browse-btn.png" alt="" />
                </div>
             </div>
          </div>
@@ -40,7 +40,7 @@
          <section class="left-sec">
             <div class="sidebar">
                <div class="sidebar-head">
-                  <h4><img src="images/library-btn.png" alt="">Your Library</h4>
+                  <h4><img src="images/icons/library-btn.png" alt="" />Your Library</h4>
                   <a href="#">+</a>
                </div>
                <div class="sidebar-scroll-sec">
@@ -72,9 +72,338 @@
                      <a href="">Cookies</a>
                   </div>
                   <div class="sidebar-foot-lng">
-                     <button><img src="images/language-icon.svg" alt="" /> English</button>
+                     <button><img src="images/icons/language-icon.svg" alt="" /> English</button>
                   </div>
                </div>
+            </div>
+         </section>
+         <section class="right-sec">
+            <div class="new-bg"></div>
+            <div class="right-cnt">
+               <section id="artist-sec">
+                  <div class="right-head">
+                     <a class="right-title">Popular artists</a>
+                     <a href="" class="right-show">Show all</a>
+                  </div>
+                  <div class="card-container">
+                     <div class="card">
+                        <div class="card-logo circled">
+                           <img src="images/artist-images/pritam.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Pritam</a>
+                        <p>Artist</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo circled">
+                           <img src="images/artist-images/ar_rahman.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>A.R. Rahman</a>
+                        <p>Artist</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo circled">
+                           <img src="images/artist-images/sachin-jigar.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Sachin-Jigar</a>
+                        <p>Artist</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo circled">
+                           <img src="images/artist-images/arjit_singh.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Arijit Singh</a>
+                        <p>Artist</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo circled">
+                           <img src="images/artist-images/anirudh.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Anirudh Ravichander</a>
+                        <p>Artist</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo circled">
+                           <img src="images/artist-images/atif.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Atif Aslam</a>
+                        <p>Artist</p>
+                     </div>
+                  </div>
+               </section>
+
+               <section id="albums-sec">
+                  <div class="right-head">
+                     <a class="right-title">Popular albums</a>
+                     <a href="" class="right-show">Show all</a>
+                  </div>
+                  <div class="card-container">
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/albums-images/glory.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>GLORY</a>
+                        <p><a href="#">Yo Yo Honey Singh</a></p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/albums-images/love_hotel.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>love hotel</a>
+                        <p><a href="#">leftovermax</a></p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/albums-images/ashiqui2.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Aashiqui 2</a>
+                        <p><a href="#">Mithoon</a>,<a href="#">Ankit Tiwari</a>, <a href="#">Jeet Gannguli</a></p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/albums-images/jo_tum.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Jo Tum Mere Ho</a>
+                        <p><a href="#">Anuv Jain</a></p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/albums-images/making_memories.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Making Memories</a>
+                        <p><a href="#">Karan Aujla</a>,<a href="#"> Ikky</a></p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/albums-images/aaj_ki_raat.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <a>Aaj Ki Raat(From <br>"Stree 2")</a>
+                        <p><a href="#">Sachin-Jigar</a>,<a href="#">Amitabh Bhattacharya</a></p>
+                     </div>
+                  </div>
+               </section>
+
+               <section id="radio-sec">
+                  <div class="right-head">
+                     <a class="right-title">Popular radio</a>
+                     <a href="" class="right-show">Show all</a>
+                  </div>
+                  <div class="card-container">
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/radio-images/arjit_singh.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>With Mithoon, Sachin-Jigar, Jeet Gannguli and more</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/radio-images/diljit.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>With Karan Aujla, AP Dhillon, Shubh and more</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/radio-images/ilayaraja.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>With K. J. Yesudas, Swarnalatha, Uma Ramanan and more</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/radio-images/kk.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>With Armaan Malik, Atif Aslam, Mohit Chauhan and more</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/radio-images/ar_rahman.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>With Anirudh Ravichander, Harris Jayaraj, Santhosh Narayanan and more</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/radio-images/udit.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>With Uttam Singh, Anuradha Paudwal, Abhijeet and more</p>
+                     </div>
+                  </div>
+               </section>
+               <section id="chart-sec">
+                  <div class="right-head">
+                      Charts</a>
+                     <a href="" class="right-show">Show all</a>
+                  </div>
+                  <div class="card-container">
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/chart-images/top_global.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Your weekly update of the most played tracks right now - Global.</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/chart-images/top_usa.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Your weekly update of the most played tracks right now - USA.</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/chart-images/top50_global.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Your daily update of the most played tracks right now - Global.</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/chart-images/top50_usa.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Your daily update of the most played tracks right now - USA.</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/chart-images/viral50_global.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Your daily update of the most viral tracks right now - Global.</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/chart-images/viral50_usa.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Your daily update of the most viral tracks right now - USA.</p>
+                     </div>
+                  </div>
+               </section>
+               <section>
+                  <div class="right-head">
+                     <a class="right-title">Spotify Playlists</a>
+                     <a href="" class="right-show">Show all</a>
+                  </div>
+                  <div class="card-container">
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/playlist-images/pop_rising.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Who's now and next in pop. Cover: Jenna Raine</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/playlist-images/rock_classics.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Rock legends & epic songs that continue to inspire generations. Cover: The Rolling Stones</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/playlist-images/lofi_chill.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Lazy slow lofi beats for laid-back moments.</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/playlist-images/indie_rock.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>True indie rock hits. Cover: Phoebe Bridgers </p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/playlist-images/happy_hits.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                     </div>
+                     <div class="card">
+                        <div class="card-logo">
+                           <img src="images/playlist-images/calming.jpg" alt="" />
+                           <div class="play">
+                              <img src="images/icons/play-btn.png" alt="" />
+                           </div>
+                        </div>
+                        <p>Keep calm with instrumental acoustic tracks.</p>
+                     </div>
+                  </div>
+               </section>
             </div>
          </section>
       </main>
