added footer section

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                               <img src="images/icons/play-btn.png" alt="" />
                            </div>
                         </div>
-                        <a>Aaj Ki Raat(From <br>"Stree 2")</a>
+                        <a>Aaj Ki Raat(From <br />"Stree 2")</a>
                         <p><a href="#">Sachin-Jigar</a>,<a href="#">Amitabh Bhattacharya</a></p>
                      </div>
                   </div>
@@ -282,7 +282,7 @@
                </section>
                <section id="chart-sec">
                   <div class="right-head">
-                      Charts</a>
+                     <a class="right-title">Featured Charts</a>
                      <a href="" class="right-show">Show all</a>
                   </div>
                   <div class="card-container">
@@ -382,7 +382,7 @@
                               <img src="images/icons/play-btn.png" alt="" />
                            </div>
                         </div>
-                        <p>True indie rock hits. Cover: Phoebe Bridgers </p>
+                        <p>True indie rock hits. Cover: Phoebe Bridgers</p>
                      </div>
                      <div class="card">
                         <div class="card-logo">
@@ -404,6 +404,43 @@
                      </div>
                   </div>
                </section>
+               <footer>
+                  <section class="footer-first-sec">
+                     <div>
+                        <h4>Company</h4>
+                        <a href="#">About</a>
+                        <a href="#">Jobs</a>
+                        <a href="#">For The Record</a>
+                     </div>
+                     <div>
+                        <h4>Communities</h4>
+                        <a href="#">For Artists</a>
+                        <a href="#">Developers</a>
+                        <a href="#">Advertising</a>
+                        <a href="#">Investors</a>
+                        <a href="#">Vendors</a>
+                     </div>
+                     <div>
+                        <h4>Useful links</h4>
+                        <a href="#">Support</a>
+                        <a href="#">Free Mobile App</a>
+                     </div>
+                     <div>
+                        <h4>Spotify Plans</h4>
+                        <a href="#">Premium Individual</a>
+                        <a href="#">Premium Duo</a>
+                        <a href="#">Premium Family</a>
+                        <a href="#">Premium Student</a>
+                        <a href="#">Spotify Free</a>
+                     </div>
+                     <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                     </div>
+                  </section>
+                  <div class="footer-copy">© 2024 Spotify AB</div>
+               </footer>
             </div>
          </section>
       </main>
