--- a/index.html
+++ b/index.html
@@ -32,28 +32,33 @@
             </div>
          </div>
          <div class="header-btns">
-            <button class="header-first-btn">Sign up</button>
-            <button class="header-second-btn">Log in</button>
+            <button class="header-signup-btn sign-btn">Sign up</button>
+            <button class="header-login-btn sign-btn">Log in</button>
          </div>
       </header>
       <main>
          <section class="left-sec">
             <div class="sidebar">
                <div class="sidebar-head">
-                  <h4><img src="images/icons/library-btn.png" alt="" />Your Library</h4>
+                  <div>
+                     <img src="images/icons/library-btn.png" alt="" />
+                     <h4>Your Library</h4>
+                  </div>
                   <a href="#">+</a>
                </div>
                <div class="sidebar-scroll-sec">
-                  <div class="side-scroll-cnt">
-                     <h4>Create your first playlist</h4>
-                     <p>It's easy, we'll help you</p>
-                     <button class="side-scroll-btn">Create playlist</button>
-                  </div>
-
-                  <div class="side-scroll-cnt">
-                     <h4>Let's find some podcasts to follow</h4>
-                     <h6>We'll keep you updated on new episodes</h6>
-                     <button class="side-scroll-btn">Browse Podcasts</button>
+                  <div class="sidebar-scroll">
+                     <div class="side-scroll-cnt">
+                        <h4>Create your first playlist</h4>
+                        <p>It's easy, we'll help you</p>
+                        <button class="side-scroll-btn">Create playlist</button>
+                     </div>
+   
+                     <div class="side-scroll-cnt">
+                        <h4>Let's find some podcasts to follow</h4>
+                        <p>We'll keep you updated on new episodes</p>
+                        <button class="side-scroll-btn">Browse Podcasts</button>
+                     </div>
                   </div>
                </div>
 
@@ -444,5 +449,12 @@
             </div>
          </section>
       </main>
+      <div class="signup-banner">
+         <div>
+            <h4>Preview of Spotify</h4>
+            <p>Sign up to get unllimited songs and podcasts with occaisional ads. No credit card needed</p>
+         </div>
+         <button class="sign-btn">Sign up free</button>
+      </div>
    </body>
 </html>
